# airflow-dags

./: Dockerfile  README.md  conn_s3_to_kafka_dag.py  dag_gold_to_neo4j.py  dag_gold_to_neo4j_2.py  dag_neo4j_to_rag.py  dag_unified_to_gold.py  dag_unified_to_gold_2.py  dag_using_sqs_unified_to_gold.py  hello_dag.py  http_s3_to_kafka_dag.py  pyproject.toml  requirements.txt  s3_to_kafka_dag.py  to_gold_dag.py  to_gold_dag.py.bak
.github/workflows/: airflow-ci-ecr.yaml  airflow-dag-ci.yaml
dags/: dag_gold_to_neo4j.py  dag_neo4j_to_rag.py  dag_test_integrity.py  dag_unified_to_gold.py  dag_using_sqs_unified_to_gold.py
plugins/: mappings.py
plugins/security_metadata/: aws_config.py
security_metadata/: mappings.py
src/common/: common_helper.py  query_v1.py
src/gold_to_neo4j/neo4j/: session_query_v1.py
src/neo4_to_rag/: prompt.py  rag_inference.py  s3_route_helper.py  s3_streaming_writer.py  s3_tmp_helper.py  whitelist.py
src/security_metadata/: aws_config.py
src/unified__to_gold/: gold_parquet_route.py
src/unified_to_gold/: common_utill.py  extract_entities.py  extract_sessions.py  gold_parquet_route.py
terraform/k8s/airflow-dags/: README.md  pyproject.toml
terraform/k8s/airflow-dags/dags/: dag_unified_to_gold.py
test/: test_dag_integrity.py
