[project]
name = "airflow-dags"
version = "0.1.0"
description = "airflow+neo4j+sqs"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
  "boto3>=1.42.53",
  "confluent-kafka>=2.13.0",
  "pandas>=2.2,<3",
  "pyarrow>=23.0.1",
  "neo4j>=5,<7",
  "groq>=1.0.0",

  # Airflow Amazon provider
  "apache-airflow-providers-amazon",

  # SqsSensor를 deferrable=True 로 쓸 때 필요
  "aiobotocore",
]
